# HaskellNeuralNet

./: .gitignore  HaskellNeuralNetwork.cabal  README.md
src/: Main.hs  NeuralNetwork.hs
test/: Tests.hs
