name:                HaskellNeuralNetwork
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/HaskellNeuralNetwork#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable HaskellNeuralNetwork
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options: -Wall
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , csv
                     , parsec
                     , random


test-suite stack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base
                     , mtl
                     , hspec
