name:                HaskellNeuralNetwork
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10


library
    hs-source-dirs:    src
    exposed-modules:   NeuralNetwork
    default-language:  Haskell2010
    ghc-options:       -Wall
    build-depends:     base
                     , random


executable HaskellNeuralNetwork
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , csv
                     , parsec
                     , random


test-suite stack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base
                     , mtl
                     , hspec
